Added login and signup pages with links

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <p>This is the home page.</p>
+        <a href="{{url_for('login')}}">Log In</a>
+        <a href="{{url_for('signup')}}">Sign Up</a>
     </body>
 </html>
