--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <p>This is the login page.</p>
+        <form method="POST">
+            <input type="text" name="username" placeholder="Enter your username" required>
+            <input type="password" name="password" placeholder="Enter your username" required>
+            <input type="submit" value="Log In">
+        </form>
         <p><a href="{{url_for('home')}}">Click here</a> to go home</p>
         <p>Don't have an account? <a href="{{url_for('signup')}}">Click here</a> to sign up!</p>
     </body>
