--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <p>This is the signup page.</p>
+        <form method="POST">
+            <input type="text" name="username" placeholder="Enter your username" required>
+            <input type="password" name="password" placeholder="Enter your username" required>
+            <input type="submit" value="Log In">
+        </form>
         <p><a href="{{url_for('home')}}">Click here</a> to go home</p>
         <p>Already have an account? <a href="{{url_for('login')}}">Click here</a> to log in!</p>
     </body>
