--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <p>This is the login page.</p>
+        <p>{{message}}</p>
         <form method="POST">
             <input type="text" name="username" placeholder="Enter your username" required>
             <input type="password" name="password" placeholder="Enter your username" required>
