Added a login cookie using the session variable

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,6 +5,7 @@
         <title>Dashboard</title>
     </head>
     <body>
+        <p>Hello, {{username}}!</p>
         <p>This is the dashboard</p>
     </body>
 </html>
