Added ability to delete accounts

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,5 +7,7 @@
     <body>
         <p>Hello, {{username}}!</p>
         <p>This is the dashboard</p>
+        <a href="{{url_for('logout')}}">Log out</a>
+        <a href="{{url_for('delete')}}" style='font-color: red;'>Delete account</a>
     </body>
 </html>
