--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Home Page</title>
-    </head>
-    <body>
-        <p>This is the home page.</p>
-        <a href="{{url_for('login')}}">Log In</a>
-        <a href="{{url_for('signup')}}">Sign Up</a>
-    </body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}Home Page{% endblock %}
+
+{% block content %}
+<p>This is the home page.</p>
+<a href="{{url_for('login')}}">Log In</a>
+<a href="{{url_for('signup')}}">Sign Up</a>
+{% endblock %}
