--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Dashboard</title>
-    </head>
-    <body>
-        <p>Hello, {{username}}!</p>
-        <p>This is the dashboard</p>
-        <a href="{{url_for('logout')}}">Log out</a>
-        <a href="{{url_for('delete')}}" style='font-color: red;'>Delete account</a>
-    </body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}Dashboard{% endblock %}
+
+{% block content %}
+<p>Hello, {{username}}!</p>
+<p>This is the dashboard</p>
+<a href="{{url_for('logout')}}">Log out</a>
+<a href="{{url_for('delete')}}" style='color: red;'>Delete account</a>
+{% endblock %}
