--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Sign Up!</title>
-    </head>
-    <body>
-        <p>This is the signup page.</p>
-        <p>{{message}}</p>
-        <form method="POST">
-            <input type="text" name="username" placeholder="Enter your username" required>
-            <input type="password" name="password" placeholder="Enter your username" required>
-            <input type="submit" value="Log In">
-        </form>
-        <p><a href="{{url_for('home')}}">Click here</a> to go home</p>
-        <p>Already have an account? <a href="{{url_for('login')}}">Click here</a> to log in!</p>
-    </body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}Sign Up!{% endblock %}
+
+{% block content %}
+<p>This is the signup page.</p>
+<p>{{message}}</p>
+<form method="POST">
+    <input type="text" name="username" placeholder="Enter your username" required>
+    <input type="password" name="password" placeholder="Enter your username" required>
+    <input type="submit" value="Log In">
+</form>
+<p><a href="{{url_for('home')}}">Click here</a> to go home</p>
+<p>Already have an account? <a href="{{url_for('login')}}">Click here</a> to log in!</p>
+{% endblock %}
