Small fixes/changes

--- a/templates/confirm-delete.html
+++ b/templates/confirm-delete.html
@@ -8,7 +8,7 @@
 <p>{{error}}</p>
 <form method='POST'>
     <input type='password' name='password' placeholder='Enter your password' required>
-    <input type='submit' value='Delete Account'>
+    <input type='submit' style='color: red;' value='Delete Account'>
 </form>
 <a href="{{url_for('dashboard')}}">Return to dashboard</a>
 {% endblock %}
