--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,8 +7,8 @@
 <p>{{message}}</p>
 <form method="POST">
     <input type="text" name="username" placeholder="Enter your username" required>
-    <input type="password" name="password" placeholder="Enter your username" required>
-    <input type="submit" value="Log In">
+    <input type="password" name="password" placeholder="Enter your password" required>
+    <input type="submit" value="Sign Up">
 </form>
 <p><a href="{{url_for('home')}}">Click here</a> to go home</p>
 <p>Already have an account? <a href="{{url_for('login')}}">Click here</a> to log in!</p>
