--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %} {% endblock %}</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
     </head>
     <body>
         {% block content %} {% endblock %}
