--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 <p>{{message}}</p>
 <form method="POST">
     <input type="text" name="username" placeholder="Enter your username" required>
-    <input type="password" name="password" placeholder="Enter your username" required>
+    <input type="password" name="password" placeholder="Enter your password" required>
     <input type="submit" value="Log In">
 </form>
 <p><a href="{{url_for('home')}}">Click here</a> to go home</p>
